Add resources to import sample data

--- a/ds_notebook/.gitignore
+++ b/ds_notebook/.gitignore
@@ -1,6 +1,8 @@
 .ipynb_checkpoints/
 spark-warehouse/
 sparkmonitor_kernelextension.log
+sparkmonitor_serverextension.log
 
 # Ignore large datasets
 notebooks/data/OpenFDAJson/
+notebooks/data/PatentClaims/
