--- a/ds_notebook/requirements.txt
+++ b/ds_notebook/requirements.txt
@@ -9,3 +9,6 @@ findspark==1.3.0
 
 # Spark monitor - https://krishnan-r.github.io/sparkmonitor/install.html
 sparkmonitor==0.0.9
+
+# MongoDB
+pymongo==3.11.3
